# alibabacloud-nls-cpp-sdk

./: readme.md
demo/Linux/: .clang-format  CMakeLists.txt  README.md  audio_ime.xml  ime_setup.cpp  ime_setup.glade  log.h  pinyintest.cpp  pulse_record.cpp  speechRecognizerDemo.cpp  speechSynthesizerDemo.cpp  speechTranscriberDemo.cpp
demo/Linux/examples/: pulse_record.cpp
demo/Linux/language/zh_CN/LC_MESSAGES/: messages.mo  messages.po
demo/Linux/res/: audio_ime.desktop  audio_ime.xml  ibus-fun.xml  ibus-fun.xml.in
demo/Linux/src/: Config.cpp  Config.h  DictSpeech.cpp  DictSpeech.h  Engine.cpp  Engine.h  FunEngine.cpp  FunEngine.h  InputMethod.cpp  InputMethod.h  PinyinIME.cpp  PinyinIME.h  RuntimeOptions.h  SpeechRecognizer.cpp  SpeechRecognizer.h  common.h  common_log.h  ibus_fun_main.cpp  ibus_fun_setup.cpp  ime_setup.cpp  log.h  main.cpp  main.h  wubi.cpp  wubi.h
demo/Windows/: speechRecognizerDemo.cpp  speechSynthesizerDemo.cpp  speechTranscriberDemo.cpp
nlsCppSdk/framework/common/: Config.h  nlsClient.cpp  nlsGlobal.h
nlsCppSdk/framework/feature/sy/: speechSynthesizerRequest.h
nlsCppSdk/framework/item/: iNlsRequestParam.cpp
nlsCppSdk/transport/: connectNode.cpp  connectNode.h  nlsEventNetWork.cpp  nlsEventNetWork.h
nlsCppSdk/utils/: nlog.cpp  nlog.h
nlsCppSdk/win/: nlsCppSdk.vcxproj
scripts/: build_linux.sh  build_windows_64_prebuild.bat
